--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -11,4 +11,6 @@
     <string name="option_login">Hai già un account? Accedi</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="logout">Esci</string>
+    <string name="statistics">Statistiche</string>
 </resources>
