--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="password">Password</string>
     <string name="logout">Logout</string>
     <string name="statistics">Statistics</string>
+    <string name="select_theme">Select theme:</string>
+    <string name="select_language">Select language:</string>
+    <string name="language_english">ENG</string>
+    <string name="language_italian">ITA</string>
 </resources>
