--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,14 +29,17 @@
     <string name="theme_light">Light</string>
     <string name="theme_dark">Dark</string>
     <string name="theme_system">System</string>
-    <string name="select_language">Select language:</string>
-    <string name="language_english">ENG</string>
-    <string name="language_italian">ITA</string>
+    <string name="available_languages">Available languages:</string>
+    <string name="language_eng">English</string>
+    <string name="language_ita">Italian</string>
+    <string name="language_esp">Español</string>
+    <string name="language_fra">Français</string>
 
     <!-- Home -->
     <string name="no_memories">No memories yet</string>
     <string name="add_new_memory">"Tap the + button to add a new memory."</string>
     <string name="world">World</string>
+    <string name="select_location">Select location</string>
 
     <!-- Add memory -->
     <string name="add_memory_title">Add title:</string>
@@ -60,6 +63,5 @@
     <string name="come_back_to_visit">Come back to visit it!</string>
     <string name="you_are">You are</string>
     <string name="from_the">" from the "</string>
-
 
 </resources>
