Added field_error string

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -55,6 +55,7 @@
     <string name="memory_public">Pubblico</string>
     <string name="add_memory_position">Aggiungi posizione:</string>
     <string name="add_memory">Aggiungi</string>
+    <string name="field_error">Per favore riempi tutti i campi</string>
 
     <!-- Profile -->
     <string name="statistics">Statistiche</string>
