--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -74,6 +74,7 @@
     <string name="permission_permanently_denied">Permiso denegado permanentemente</string>
     <string name="permission_unknow">Estado de permiso desconocido</string>
     <string name="gps_disabled">GPS desactivado</string>
+    <string name="notifications_disabled">Notificaciones desactivadas</string>
 
     <!-- Biometric authentication -->
     <string name="biometric_authentication_is_not_available">Biometric authentication is not available</string>
