--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -74,6 +74,7 @@
     <string name="permission_permanently_denied">Permission refusée de manière permanente</string>
     <string name="permission_unknow">Permission inconnue</string>
     <string name="gps_disabled">Le GPS est désactivé</string>
+    <string name="notifications_disabled">Notifications désactivées</string>
 
     <!-- Biometric authentication -->
     <string name="biometric_authentication_is_not_available">Biometric authentication is not available</string>
