--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -74,6 +74,7 @@
     <string name="permission_permanently_denied">Permesso negato in modo permanente</string>
     <string name="permission_unknow">Permesso sconosciuto</string>
     <string name="gps_disabled">Il GPS è disattivato</string>
+    <string name="notifications_disabled">Notifiche disattivate</string>
 
     <!-- Biometric authentication -->
     <string name="biometric_authentication_is_not_available">Biometric authentication is not available</string>
