--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -64,6 +64,8 @@
     <string name="statistics">Statistiche</string>
     <string name="memories">I miei ricordi</string>
     <string name="favorite">I miei preferiti</string>
+    <string name="delete">Elimina</string>
+    <string name="delete_succ">Ricordo eliminato con successo</string>
 
     <!--Notifications-->
     <string name="near_at">Sei vicino a %1$s</string>
